# todo_list_v1

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  cliff.toml  deny.toml  example_prod.toml
examples/: first_example.rs  gen_pwd.rs
migrations/: 20251205011924_create_tables.up.sql
src/: lib.rs  main.rs
src/app/: server.rs
src/common/: json.rs  path.rs  query.rs  serde.rs
src/conf/: app.rs  base.rs  database.rs  mod.rs  redis.rs
src/db/: mod.rs  my_redis.rs  pgsql.rs
src/entities/: mod.rs  prelude.rs  todo_list.rs  users.rs
src/handlers/common/: model.rs
src/handlers/user/: login.rs  query.rs
src/log/: logger.rs
src/middlewares/auth/: auth_layer.rs  identity.rs  jwt.rs  principal.rs
src/middlewares/cors/: app_cors.rs
src/response/: errors.rs
src/router/: login.rs  mod.rs  user.rs  version.rs
src/state/: app_state.rs
src/utils/: crypto.rs  latency.rs  mod.rs  timezone.rs
tests/: first_test.rs
